# MTCNN-caffe-train

./: README.md
caffe/include/caffe/layers/: mtcnn_euclidean_loss_layer.hpp
caffe/src/layers/: mtcnn_euclidean_loss_layer.cpp  mtcnn_euclidean_loss_layer.cu
det/: CMakeLists.txt  MTCNN.cpp  MTCNN.h  main.cpp
model/: ONet_solver.prototxt  ONet_train.prototxt  ONet_train.sh  PNet_solver_all.prototxt  PNet_train_all.prototxt  PNet_train_all.sh  PNet_train_cl.sh  RNet_solver.prototxt  RNet_train.prototxt  RNet_train.sh
scripts/: 1_extract_voc.py  2_gen_data.py  3_gen_hdf5.py
